<resources>
    <string name="app_name">Store_api</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="registrasi">Registrasi</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="panjang">contoh Deskripsi panjang</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="textview12">TextView12</string>
    <string name="textview23">TextView23</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_dicoding">Event Dicoding</string>
    <string name="favorite_event">Favorite Event</string>
    <string name="dark_mode">Dark Mode</string>
</resources>